--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "breakpoint-hooks",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -19,5 +19,9 @@
     "@types/react": "^18.2.70",
     "react": "^18.2.0",
     "typescript": "^5.4.3"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/AidanLDev/breakpoint-hooks"
   }
 }
